<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".TimeLapseFull">

    <ImageView
        android:id="@+id/title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:contentDescription="@string/logo_label_description"
        android:src="@mipmap/ic_spresense"
        android:background="#FFFFFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/main_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:contentDescription="@string/main_window_description"
            android:src="@mipmap/ic_launcher"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sub_view_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sub_window_1_description"
                android:src="@mipmap/ic_launcher"
                android:background="#FFFFFF" />

            <ImageView
                android:id="@+id/sub_view_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sub_window_2_description"
                android:src="@mipmap/ic_launcher"
                android:background="#FFFFFF" />

            <ImageView
                android:id="@+id/sub_view_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sub_window_3_description"
                android:src="@mipmap/ic_launcher"
                android:background="#FFFFFF" />

            <ImageView
                android:id="@+id/sub_view_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sub_window_4_description"
                android:src="@mipmap/ic_launcher"
                android:background="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>